# LeagueOfLosers

./: README.md  pyproject.toml  setup.sh
notebooks/: 0 Exploratory Analysis.ipynb  1 Standard Supervised Learning.ipynb  2 PCA Supervised Learning.ipynb  Exploratory Analysis.ipynb  notebook.ipynb
